--- a/style.css
+++ b/style.css
@@ -49,9 +49,17 @@ body {
 }
 
 .block {
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     font-family: 'Russo One', sans-serif;
     color: #3e3939;
+    
+}
+.block img {
+    width: 200px;
+}
+
+.block a {
+    margin-bottom: 30px;
 }
 
 .block a:hover {
@@ -70,7 +78,7 @@ body {
 }
 
 .footer {
-    padding-top: 
+    padding-top: 5px;
     height: 25px;
     width: 70%;
     margin: -25px auto 0;
@@ -90,7 +98,6 @@ h1 {
 
 .text p {
     font-size: 1.5em;
-    ;
     font-family: 'Oswald', sans-serif;
     font-weight: 200;
 
@@ -106,9 +113,32 @@ a {
 
 }
 
+.startDay {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
 
 .text {
     margin-bottom: 5%;
+}
+
+.selectQuantityDayBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.selectQuantityDay {
+    width: 150px;
+    margin-bottom: 3px;
+}
+
+.manualInputField {
+    width: 150px;
 }
 
 .box p {
@@ -116,13 +146,13 @@ a {
 }
 
 .box input {
-    height: 50px;
+    /* height: 50px; */
     margin-bottom: 5%;
-    width: 350px;
+    /* width: 350px; */
     text-align: center;
     font-family: 'Russo One', sans-serif;
     font-weight: 400;
-    color: #3e3939;    
+    color: #3e3939;
 }
 
 .box a {
@@ -147,10 +177,6 @@ a {
     color: #dad7d7;
 }
 
-input {
-    font-size: 16px;
-}
-
 .textmenu {
     margin-left: 2%;
     clear: both;
@@ -166,7 +192,7 @@ input {
 .textmenu ul {
     text-align: left;
     text-decoration: underline;
-    list-style:none;
+    list-style: none;
     color: #a96b6b;
 }
 
@@ -190,9 +216,20 @@ input {
 .paragraph p {
     text-indent: 20px;
     text-align: justify;
-    line-height: 1.3;    
+    line-height: 1.3;
 }
 
+.legendQuantityDay {
+    font-size: 16px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    text-align: left;
+    margin-left: 15px;
+}
+
+.fieldsetQuantityDay {
+    display: flex;
+}
 
 @media screen and (max-width: 790px) {
     .container {
